fix z index bug on home screen and alignment of skill circles

--- a/src/components/skill-meter/skill-meter.css
+++ b/src/components/skill-meter/skill-meter.css
@@ -1,9 +1,20 @@
 .skill-meter-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     text-align: center;
 }
 .skill-name {
     font-size: 3.2vmin;
     margin-bottom: 15px;
+}
+.skill-meter-progressbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 .technology-logo {
     width: 60px;
