--- a/src/components/sticky-header/sticky-header.css
+++ b/src/components/sticky-header/sticky-header.css
@@ -1,7 +1,7 @@
 .sticky-position {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 10;
 }
 .sticky-header-container {
     display: flex;
